objects/Case_Comment_Template__c.object
<CustomObject>
    <label>Case Comment Template</label>
    <nameField>
        <label>Case Comment Tempate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Comment Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>DDW</fullName>
                </value>
                <value>
                    <fullName>EXCELLENCE</fullName>
                </value>
                <value>
                    <fullName>Generic</fullName>
                </value>
                <value>
                    <fullName>GfK</fullName>
                </value>
                <value>
                    <fullName>SSO issue</fullName>
                </value>
                <value>
                    <fullName>VISTA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment_Body__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSSG_Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DSSG_Resolution__c</fullName>
        <label>Resolution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
</CustomObject>